--- a/app/templates/add.html
+++ b/app/templates/add.html
@@ -8,8 +8,8 @@
     <title>Document</title>
 </head>
 {% load static %}
-<link rel="stylesheet" href="{% static 'style.css' %}">
-
+<link rel="stylesheet" href="{% static "style1.css" %}">
+<link href="{% static 'responsive.css' %}" rel="stylesheet" />
 <body>
     <div class="container1">
         <h1>Add Item</h1>
