--- a/app/templates/pdf.html
+++ b/app/templates/pdf.html
@@ -8,6 +8,7 @@
     <title>DURGA BHAVANI TRADERS</title>
     <style>
         h1 {text-align: center;}
+        h4 {text-align: center;}
         div {text-align: center;}
         table, th, td {
                 border: 1px solid black;
@@ -21,74 +22,94 @@
 </head>
 {% load static %}
 <link rel="stylesheet" href="{% static "style1.css" %}">
+<link href="{% static 'responsive.css' %}" rel="stylesheet" />
 <body>
     <div class="container">
         <h1 text>DURGA BHAVANI TRADERS</h1>
         <table id="customers" border="1">
             <thead>
-                <th>SNO</th>
-                <th>LOT Name</th>
-                <th>Bags</th>
-                <th>Total Kgs</th>
-                <th>Rate Per Kg</th>
-                <th>Amount Rs</th>
+                <tr>
+                    <th >SNO</th>
+                    <th>LOT Name</th>
+                    <th>Bags</th>
+                    <th>Total Kgs</th>
+                    <th>Rate Per Kg</th>
+                    <th>Amount Rs</th>
+                </tr>
             </thead>
-           {% for i in biller %}
-            <tr>
-                <td >{{i.id}}</td>
-                <td>{{i.LOT_Name}}</td>
-                <td>{{i.Bags}}</td>
-                <td>{{i.Total_Kgs}}</td>
-                <td>{{i.Rate_Per_Kg}}</td>
-                <td>{{i.Amount_Rs}}</td>
-
-            </tr>
-          {% endfor%}
-        <tfoot>
-            {% for i in totc %}
-            <tr>
-                <th colspan="4">Total Bags</th>
-                <td id="totalBags" colspan="2">{{i.totalBags}}</td>
-            </tr>
-            <tr>
-                <th colspan="4">Total Bags</th>
-                <td id="totalkgs" colspan="2">{{i.totalkgs}}</td>
-            </tr>
-            <tr>
-                <th colspan="4">Total Amount</th>
-                <td id="totalAmount" colspan="2">{{i.totalAmount}}</td>
-            </tr>
-            {% endfor%}
-        </tfoot> 
-        </table>
-        <table id="Deductions" border="1">
-            
-            <thead>
-                <th>Cooli & Rent:</th>
-                <th>L/F Amount:</th>
-                <th>Commission(%5):</th>
-                <th>Brokerage:</th>
-            </thead>
-            {% for i in dedc %}
-            <tr>
-                <td>{{i.Cooli_Rent}}</td>
-                <td>{{i.LF_Amount}}</td>
-                <td>{{i.Commission}}</td>
-                <td>{{i.Brokerage}}</td>
-            </tr>
-            {% endfor%}
-            <tfoot>
+            <tbody>
+                {% for i in biller %}
+                <tr>
+                    <td>{{ i.id }}</td>
+                    <td>{{ i.LOT_Name }}</td>
+                    <td>{{ i.Bags }}</td>
+                    <td>{{ i.Total_Kgs }}</td>
+                    <td>{{ i.Rate_Per_Kg }}</td>
+                    <td>{{ i.Amount_Rs }}</td>
+                </tr>
+                {% endfor %}
+                
                 {% for i in totc %}
                 <tr>
-                    <th colspan="2">Deduction</th>
-                    <td id="Deduction" colspan="2">{{i.Deduction}}</td>
+                    <th colspan="3">Total Sales Bags Count: </th>
+                    <td colspan="1">{{ i.totalBags }}</td>
+                    <th rowspan="3" colspan="3">
+                        <h4>Deductions</h4>
+                        </th>
                 </tr>
                 <tr>
-                    <th colspan="2">Total Net Amount</th>
-                    <td id="totalnetAmount" colspan="2">{{i.totalnetAmount}}</td>
+                    <th colspan="3">Total Kgs:</th>
+                    <td colspan="1">{{ i.totalkgs }}</td>
                 </tr>
-                {% endfor%}
-            </tfoot> 
+                <tr>
+                    <th colspan="3">Total Amount:</th>
+                    <td colspan="1">{{ i.totalAmount }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+            <tbody>
+                {% for i in dedc %}
+                {% if forloop.first %}
+                <tr>
+                    <th colspan="4">Cooli & Rent</th>
+                    <td colspan="2">{{ i.Cooli_Rent }}</td>
+                </tr>
+                <tr>
+                    <th colspan="4">L/F Amount</th>
+                    <td colspan="2">{{ i.LF_Amount }}</td>
+                </tr>
+                <tr>
+                    <th colspan="4">Commission (%5)</th>
+                    <td colspan="2">{{ i.Commission }}</td>
+                </tr>
+                <tr>
+                    <th colspan="4">Brokerage</th>
+                    <td colspan="2">{{ i.Brokerage }}</td>
+                </tr>
+                {% endif %}
+                {% endfor %}
+            </tbody>
+            <tfoot>
+                {% for i in totc %}
+                {% if forloop.first %}
+                <tr>
+                    <th colspan="4">Deduction</th>
+                    <td colspan="2">{{ i.Deduction }}</td>
+                </tr>
+                <tr>
+                    <th colspan="3">Total Amount:</th>
+                    <td colspan="1"><b>{{ i.totalAmount }}</b></td>
+                    <th colspan="3">Deduction</th>
+                    <td colspan="1" ><b>{{ i.Deduction }}</b></td>
+                </tr>
+                <tr>
+                    <th colspan="6">Total Net Amount</th>
+                    <td colspan="2"><b>{{ i.totalnetAmount }}</b></td>
+                </tr>
+                {% endif %}
+                {% endfor %}
+            </tfoot>
+        </table>
             
            <!-- <script>
                 function calculateTotals() {
@@ -138,7 +159,6 @@
             </script>
             -->
         
-        </table>
         
 
         <br><br>
