--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -104,7 +104,7 @@
             </tr>
             <tr>
                 <th colspan="3">Commission(%5):</th>
-                <td colspan="1">{{i.Commission}}</td>
+                <td colspan="1">{{i.Commission|floatformat:2}}</td>
             </tr>
             <tr>
                 <th colspan="3">Brokerage:</th>
@@ -112,7 +112,7 @@
             </tr>
             <tr>
                 <td>
-                    <a href="deleteded/{{i.id}}"><button id="del">Delete</button></a>
+                    <a href="deleteded"><button id="del">Delete</button></a>
                 </td>
             </tr>
             
@@ -210,6 +210,7 @@
         
         
         <br><br>
+        <a href="{% url 'deleted' %}"><button id="new3" >Delete All</button></a>
         <a href="{% url 'add' %}"><button id="new3" >Add Iteam</button></a>
         <a href="{% url 'ded' %}"><button id="new3" >Add Deduction</button></a>
         <a href="{% url 'pdf' %}"><button id="new3">pdf generate</button></a>
