--- a/app/templates/pdf.html
+++ b/app/templates/pdf.html
@@ -80,7 +80,7 @@
                 </tr>
                 <tr>
                     <th colspan="4">Commission (%5)</th>
-                    <td colspan="2">{{ i.Commission }}</td>
+                    <td colspan="2">{{ i.Commission|floatformat:2 }}</td>
                 </tr>
                 <tr>
                     <th colspan="4">Brokerage</th>
